Cert-manage/result-app-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vote.devopsprac.pw
    secretName: voting-app-tls
  rules:
  - host: vote.devopsprac.pw
    http:
      paths:
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result-service
            port:
              number: 80
